adding another joystick, constraining them, started adding break button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".JoystickView" />
-        <activity android:name=".ControlScreen"></activity>
+        <activity android:name=".ControlScreen" />
+        <activity android:name=".ControlStickViewRight"></activity>
     </application>
 
 </manifest>
